--- a/app/.env.development
+++ b/app/.env.development
@@ -3,4 +3,5 @@ DB_HOST = "localhost"
 DB_PORT = "3306"
 DB_USER = "test"
 DB_PWD = "test"
-DB_NAME = "test"
+DB_NAME = "api_test"
+ACCESS_TOKEN_EXPIRE_MINUTES = 30
